examples/ok/bubble_sort.bina
fn bubble_sort(values: [20]int32) -> [20]int32 {
    mut arr: [20]int32 = values;

    mut i: int64 = 0;
    while i < len(arr) {
        mut j: int64 = 0;

        while j + 1 < len(arr) - i {
            if arr[j] > arr[j + 1] {
                let temp: int32 = arr[j];
                arr[j] = arr[j + 1];
                arr[j + 1] = temp;
            }

            j = j + 1;
        }

        i = i + 1;
    }

    return arr;
}

fn main() -> int {
    let unsorted: [20]int32 = [
        42, 7, 19, 3, 88,
        12, 5, 61, 30, 1,
        77, 24, 9, 55, 16,
        2, 100, 34, 11, 6
    ];

    let sorted: [20]int32 = bubble_sort(unsorted);

    mut i: int64 = 0;
    while i < len(sorted) {
        print(sorted[i]);
        print(" ");
        i = i + 1;
    }

    print("\n");
    return 0;
}