examples/fail/semantic/array_equality_type_mismatch.bina
// EXPECT_SEMANTIC_ERROR: cannot compare [3]int32 and [2]int32
fn main() -> int {
    let a: [3]int32 = [1, 2, 3];
    let b: [2]int32 = [1, 2];
    let bad = a == b;
    return 0;
}
